--- a/100/11/index.css
+++ b/100/11/index.css
@@ -1,10 +1,16 @@
-.box{width: 100px;
+.box {
+	width: 100px;
 	height: 100px;
 	background-color: red;
 	transition: all 1s .1s;
+	border-radius: 50%；
 
 }
 .box.move{
 	transform: translateX(100%);
+	width: 300px;
+	height: 900px;
+	background-color: green;
+
 
 }
